<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PrivacyFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/privacy_update_message"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/texView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:padding="5dp"
                android:text="@string/privacy_message"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/usage_data"
                android:textSize="15sp"
                android:textStyle="bold" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/texView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:padding="5dp"
                android:text="@string/usage_message"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/security"
                android:textSize="15sp"
                android:textStyle="bold" />


            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/texView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:padding="5dp"
                android:text="@string/security_message"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/grievance_officer"
                android:textSize="15sp"
                android:textStyle="bold" />

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/texView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:padding="5dp"
                android:text="@string/grievance_officer_mes"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/officer_address"
                android:textSize="14sp"
                android:textStyle="normal" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>