<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    tools:context=".Fragment.TeamFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/our_team"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txtShow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/owner_details"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edtOFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/edt_bg_design"
                android:drawablePadding="5dp"
                android:hint="@string/enter_first_name"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark_gray"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtOLname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/edt_bg_design"
                android:drawablePadding="5dp"
                android:hint="@string/enter_last_name"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark_gray"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnInsert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:padding="5dp"
                android:text="@string/team_add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/dark_gray" />

            <Button
                android:id="@+id/btnShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:padding="5dp"
                android:text="@string/team_show"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/dark_gray" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:padding="5dp"
                android:text="@string/team_update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/dark_gray" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:padding="5dp"
                android:text="@string/team_delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/dark_gray" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbackground"
                android:padding="5dp"
                android:text="@string/team_clear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/dark_gray" />

            <!--        </LinearLayout>-->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/splash_logo" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>